# advent_of_code

./: .gitignore  README.md
2020/03/: 03.py
2020/06/: 06.py
2020/07/: 07.py
2020/09/: 09.py
2020/13/: 13.py
2020/16/: 16.py
2020/17/: 17.py
2020/19/: 19.py
2020/day01/: day01.py
2020/day04/: day04.py
2020/day06/: day06.py
2020/day07/: day07.py
2020/day08/: day08.py
2020/day09/: day09.py
2020/day1/: day1.py
2020/day10/: day10.py
2020/day11/: day11.py
2020/day12/: day12.py
2020/day14/: day14.py
2020/day15/: day15.py
2020/day18/: day18.py
2020/day2/: day2.py
2020/day20/: day20.py
2020/day21/: day21.py
2020/day22/: day22.py
2020/day23/: day23.py
2020/day24/: day24.py
2020/day25/: day25.py
2020/day5/: day5.py
2020/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py
2021/: .gitignore  Cargo.toml
2021/src/: main.rs  util.rs
2022/: .gitignore  play.nim  test.nim
2022/day01/: main.nim
2022/day02/: main.nim
2022/day03/: main.nim
2022/day04/: main.nim
2022/day05/: main.nim
2023/: .gitignore  CMakeLists.txt
2023/src/: day.h  main.cpp  util.cpp  util.h
2023/src/day/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
2023_temp/: .gitignore  Cargo.toml  README.md
2024/: build.zig  build.zig.zon  go.mod
2024/src/: day01.zig  (+1 more)
2024_zig/: build.zig  build.zig.zon
(+36 files in other folders)
